# ai-cook-beckend

./: .dockerignore  .env  .env.example  .gitignore  AI_FRIDGE_INTEGRATION.md  AI_INTEGRATION_COMPLETE_REPORT.md  BACKEND_STATUS_REPORT.md  COMPARISON_WITH_MYFITNESSPAL.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  ENV_SETUP.md  FRONTEND_GUIDE.md  GEMINI_SETUP.md  KOYEB_DEPLOY.md  MIGRATION_FIX_COMPLETE.md  PRODUCTION_READY.md  PROJECT_STATUS.md  README.md  README_RU.md  WEBSOCKET_GUIDE.md  WEBSOCKET_UPGRADE_SUMMARY.md  fix_types.sql  koyeb.yml  run.sh  start-backend.sh
.sqlx/: query-6f292f73449d3103b36d90ba1ede6e20cb6d25bb6df7d33e8898194d4ca48da4.json
migrations/: 001_initial.sql  002_goals_community.sql
src/: config.rs  db.rs  main.rs
src/api/: ai.rs  auth.rs  community.rs  diary.rs  fridge.rs  goals.rs  mod.rs  personal_health.rs  recipes.rs  websocket.rs
src/middleware/: mod.rs
src/models/: community.rs  diary.rs  fridge.rs  goal.rs  health.rs  mod.rs  presets.rs  recipe.rs  user.rs
src/services/: ai.rs  auth.rs  community.rs  diary.rs  diary_full.rs  fridge.rs  fridge_broken.rs  fridge_db.rs  fridge_full.rs  fridge_improved.rs  fridge_mock.rs  goal.rs  health.rs  media.rs  mod.rs  personal_health_assistant.rs  realtime.rs  recipe.rs
src/utils/: errors.rs
