[package]
name = "itcook-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.37", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "9.3"
bcrypt = "0.17.0"
uuid = { version = "1.8", features = ["v4", "serde"] }

# Environment & Config
dotenvy = "0.15"
config = "0.15.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP Client for external APIs
reqwest = { version = "0.12.20", features = ["json"] }

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Async
async-trait = "0.1"

# File upload
multipart = "0.18"

# WebSocket & Real-time
tokio-tungstenite = "0.27.0"
axum-extra = { version = "0.9", features = ["typed-header"] }
futures-util = "0.3"
dashmap = "6.1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Random
rand = "0.8"
