[package]
name = "itcook-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.37", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.8", features = ["v4", "serde"] }

# Environment & Config
dotenvy = "0.15"
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP Client for external APIs
reqwest = { version = "0.11.27", features = ["json"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Async
async-trait = "0.1"

# File upload
multipart = "0.18"

# WebSocket & Real-time
tokio-tungstenite = "0.21"
axum-extra = { version = "0.8", features = ["typed-routing"] }
futures-util = "0.3"
dashmap = "6.1.0"
hyper = { version = "0.14", features = ["server", "http1", "http2", "tcp"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Random
rand = "0.8"

# Static storage for mock data
once_cell = "1.19"
base64ct = "=1.7.1"